--- a/WCSExample/MediaDevices/Info.plist
+++ b/WCSExample/MediaDevices/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Need camera access for publishing stream with video</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need microphone for publishing stream with audio</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
