--- a/WCSExample/TwoWayStreaming/Info.plist
+++ b/WCSExample/TwoWayStreaming/Info.plist
@@ -27,10 +27,7 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Need microphone for publishing stream with audio</string>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-		<string>voip</string>
-	</array>
+	<array/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
