--- a/Swift/ImageOverlay/Info.plist
+++ b/Swift/ImageOverlay/Info.plist
@@ -26,6 +26,8 @@
 	<string>Need camera access for publishing stream with video</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Need microphone for publishing stream with audio</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need photo for overlay streaming video</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -42,8 +44,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
